[project]
name = "awesome-geospatial-companies"
version = "0.0.1"
description = ""
requires-python = ">=3.8"
dependencies = [
    "black>=24.8.0",
    "pandas>=2.0.3",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []  # Avoids auto-discovery of module folder
